[package]
name = "q-capi"
version = "0.1.0"
authors = ["lwshang <lwsh37@gmail.com>"]
edition = "2018"

[dependencies]

[build-dependencies]
cc = "1.0"

[features]
# to generate share library embeded into q
# not link kdb object
embed = []

# link kdb object and can do ipc call with q session
ipc = []